todo-app/todo-app-web-server/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoappwebserver-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoappwebserver
  template:
    metadata:
      labels:
        app: todoappwebserver
    spec:
      volumes:
        - name: todoapp
          persistentVolumeClaim:
            claimName: my-pv-claim
      containers:
        - name: todoappwebserver
          image: wilky2/todoappwebserver:2.2
          volumeMounts:
            - name: todoapp
              mountPath: /usr/src/app/files
