todo-app/todo-app-web-server/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todoappwebserver-svc
spec:
  type: ClusterIP
  selector:
    app: todoappwebserver
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
