todo-app/todo-app-web-server/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-material-ingress
spec:
  rules:
  - http:
      paths:
      - path: /todos
        pathType: Exact
        backend:
          service:
            name: todobackend-svc
            port:
              number: 4345
      - path: /image/current
        pathType: Exact
        backend:
          service:
            name: todoappwebserver-svc
            port:
              number: 2345
      - path: /
        pathType: Exact
        backend:
          service:
            name: todoappwebserver-svc
            port:
              number: 2345
