todo-app/todo-app-web-server/manifests/route-image.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: project
  name: todo-app-web-image-route
spec:
  parentRefs:
  - name: project-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /current/image
    backendRefs:
    - name: todoappwebserver-svc
      port: 80
